--- a/src/react/scss/main.scss
+++ b/src/react/scss/main.scss
@@ -34,3 +34,13 @@ h6,
 nav>ul {
     font-family: Korataki, Helvetica, sans-serif;
 }
+
+p, span {
+    font-family: Montserrat, Helvetica, sans-serif;
+}
+
+.container {
+    max-width: 1440px;
+    width: 100%;
+    margin: 1rem auto;
+}
