--- a/src/react/footer/footer.scss
+++ b/src/react/footer/footer.scss
@@ -6,4 +6,28 @@ footer {
     font-family: Korataki, Arial, Helvetica, sans-serif;
 
     @include container;
+
+    .footer-wrapper {
+        margin: 4rem 0;
+        display: flex;
+        justify-content: space-between;
+
+        @media(max-width: 992px) {
+            flex-direction: column-reverse;
+            gap: 25px;
+        }
+
+        p {
+            text-align: center;
+            font-size: 24px;
+            font-weight: 700;
+            line-height: 120%;
+            text-transform: uppercase;
+            font-family: Korataki, Arial, Helvetica, sans-serif;
+
+            @media(max-width: 992px) {
+                font-size: 20px;
+            }
+        }
+    }
 }
