--- a/src/react/pages/home/components/aboutMe/aboutMe.scss
+++ b/src/react/pages/home/components/aboutMe/aboutMe.scss
@@ -2,14 +2,65 @@
 
 
 .aboutMe-container {
-    
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    @media (max-width: 1600px) {
+        width: 1115px;
+    }
+
+    @media (max-width: 1280px) {
+        width: 95%;
+    }
+
+
+    @media (max-width: 992px) {
+        justify-content: center;
+        gap: 25px;
+    }
 
     .aboutMe-text {
         color: #fff;
+        flex: 0 0 65%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
 
+        @media (max-width: 992px) {
+            flex: 0 0 95%;
+        }
 
-        p{
+        p {
             margin: 1rem 0;
+            line-height: 110%;
+            font-size: 16px;
+        }
+    }
+
+    .aboutMe-image {
+        img {
+            max-width: 300px;
+            width: 100%;
+
+            @media (max-width: 992px) {
+                max-width: 95%;
+                margin: auto;
+            }
+        }
+
+        .aboutMe-imageMob {
+            display: none;
+        }
+
+        @media (max-width: 992px) {
+            .aboutMe-imageDesk {
+                display: none;
+            }
+
+            .aboutMe-imageMob {
+                display: block;
+            }
         }
     }
 }
