--- a/src/react/scss/main.scss
+++ b/src/react/scss/main.scss
@@ -9,7 +9,7 @@
 
 body {
     font-size: 16px;
-    
+
     /* BACKGROUND GRID */
     background-color: var(--main-black);
     background-size: 160px 160px;
@@ -35,12 +35,32 @@ nav>ul {
     font-family: Korataki, Helvetica, sans-serif;
 }
 
-p, span {
+p,
+span {
     font-family: Montserrat, Helvetica, sans-serif;
 }
 
 .container {
-    max-width: 1440px;
+    max-width: 1324px;
+    /* 1440px */
     width: 100%;
     margin: 1rem auto;
+
+    @media(max-width: 1366px) {
+        max-width: 100%;
+        width: 95%;
+    }
+}
+
+.mainTitles {
+    color: #fff;
+    font-size: 40px;
+    font-weight: 800;
+    text-align: center;
+    padding-bottom: 1rem;
+    text-transform: uppercase;
+
+    @media(max-width: 992px) {
+        font-size: 24px;
+    }
 }
