--- a/src/react/footer/footer.scss
+++ b/src/react/footer/footer.scss
@@ -17,7 +17,9 @@ footer {
             gap: 25px;
         }
 
-        p {
+        p,a {
+            text-decoration: none;
+            color: #ffffff;
             text-align: center;
             font-size: 24px;
             font-weight: 700;
